--- a/styles/TeamCard.module.scss
+++ b/styles/TeamCard.module.scss
@@ -3,9 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  min-width: 400px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-right: 50px;
+  transform: translateX(50px);
 }
 
 .border {
@@ -25,22 +24,29 @@
 
 .p {
   margin-left: 8px;
-}
-.main {
-  min-width: 400px;
-  overflow: hidden;
-  position: relative;
+  color: rgb(68, 68, 68);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .card {
-  height: 400px;
-  width: 400px;
+  width: 500px;
+  min-width: 300px;
   background-size: cover;
   background-position: fixed;
 }
 
+@media screen and (max-width: 768px) {
+  .card {
+    width: 100%;
+    min-width: 300px;
+  }
+  .super {
+    margin-right: 50px;
+    transform: translateX(20px);
+  }
+}
+
 .img {
   width: 100%;
-  height: 100%;
   clip-path: circle(5% at 50% 50%);
 }
