--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,25 +4,17 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  font-family: Poppins;
+  font-weight: 500;
+  margin-bottom: 150px;
 }
 
 .title {
@@ -32,10 +24,11 @@
 .slider {
   margin-top: 100px;
   width: 100%;
-  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  transform: translateX(50px);
+  overflow: hidden;
 }
 
 .slides {
