--- a/styles/TeamCard.module.scss
+++ b/styles/TeamCard.module.scss
@@ -22,7 +22,7 @@
 .cardDetails {
   margin-top: 16px;
   border: 0;
-  border-left: 2px solid black;
+  border-left: 2px solid #353535;
 }
 
 .cardName {
