--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,6 +134,7 @@ html {
 }
 html,
 body {
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
