--- a/styles/globals.css
+++ b/styles/globals.css
@@ -141,6 +141,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #fafafa;
 }
+body {
+  min-height: 100vh;
+}
 
 a {
   color: inherit;
