--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,3 +153,18 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.our-clients .container {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.our-clients .container #client-slider {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+}
