--- a/styles/globals.css
+++ b/styles/globals.css
@@ -166,7 +166,7 @@ a {
   display: flex;
 }
 .item {
-  background-color: #aa8822;
+  /* background-color: #aa8822; */
   display: flex;
   align-items: center;
   justify-content: center;
