--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,7 +139,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #fafafa;
+  color: #fafafa;
 }
 body {
   min-height: 100vh;
@@ -153,31 +153,101 @@ a {
 * {
   box-sizing: border-box;
 }
-.wrapper {
+
+.title {
+  color: #35ba99;
+  font-size: 6rem;
+  font-weight: 600;
+  line-height: 130%;
   width: 100%;
+  text-align: center;
+  margin-top: 10%;
+}
+
+.mygrid {
+  display: grid;
+  grid-template-columns: 4fr 2fr;
   position: relative;
-  margin: 0 auto;
 }
-.overflow {
-  overflow: hidden;
-  width: 100%;
-}
-.container {
-  display: flex;
-}
-.item {
-  /* background-color: #aa8822; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  border: 1px solid #333;
-  width: 60px;
-  user-select: none;
+
+.card {
+  width: 300px;
+  height: 300px;
+  position: relative;
   cursor: pointer;
+  margin-right: 50px;
+  margin-left: 50px;
+}
+.bg {
+  width: 100%;
+  height: 300px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  transform-origin: bottom center;
+  transition: all 200ms cubic-bezier(0.42, 0, 1, 1);
+}
+.img {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  background-image: url("https://cdn.discordapp.com/attachments/918613990677049416/918614030518743090/rica_small.png");
+  background-size: cover;
+  background-position: center;
+  z-index: 2;
+  transform-origin: bottom center;
+  transition: all 700ms cubic-bezier(0.2, 2, 0.5, 1);
+  filter: grayscale(1);
+}
+
+.text {
+  line-height: 40px;
+  position: absolute;
+  bottom: 0px;
+  font-size: 1.3rem;
+  width: 300px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 4;
+  color: transparent;
+  background: rgba(0, 0, 0, 0);
+  transform-origin: top center;
+  transition: all 300ms cubic-bezier(0.05, 0.7, 0.42, 1.59);
+}
+
+.card:hover .img {
+  transform: scale(1.5);
+  filter: grayscale(0);
+}
+.card:hover .bg {
+  transform: scaleX(0.9) scaleY(0.9);
+  border-radius: 50%;
+  background-color: #b5aee4;
+  filter: blur(20px);
+}
+.card:hover .ricatxt {
+  transform: translateY(40px);
+  color: #fff;
+  background: rgba(0, 0, 0, 1);
+}
+.card:hover .delfastxt {
+  transform: translateY(40px) translateX(-50px);
+  color: #fff;
+  background: rgba(0, 0, 0, 1);
+}
+
+.delfas {
+  background-image: url("https://cdn.discordapp.com/attachments/548636527148793866/918520167355547758/delfas-1.3.png");
+}
+
+.ricatxt {
+  width: 345px;
+}
+.delfastxt {
+  width: 400px;
+  transform: translateX(-50px);
 }
